--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SMILE\AppData\Local\Temp\testng-eclipse--1460943173\testng-customsuite.xml</span>
+                    <span>C:\Users\SMILE\AppData\Local\Temp\testng-eclipse-1199165429\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">runScenario("Launching the browser successfully", "Launching the browser")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Login successfully&quot;, &quot;Login&quot;)">runScenario("Login successfully", "Login")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of finding the doctor successfully&quot;, &quot;Find the doctor&quot;)">runScenario("Verification of finding the doctor successfully", "Find the doctor")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of selecting and viw details of the doctor successfull&quot;, &quot;Select and view details of t...)">runScenario("Verification of selecting and viw details of the doctor successfull", "Select and view details of t...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">runScenario("Launching the browser successfully", "Launching the browser")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verification of finding the doctor successfully&quot;, &quot;Find the doctor&quot;)">runScenario("Verification of finding the doctor successfully", "Find the doctor")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,10 +141,30 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">
+                  </a> <!-- runScenario("Launching the browser successfully", "Launching the browser") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Launching the browser successfully","Launching the browser")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="runScenario(&quot;Login successfully&quot;, &quot;Login&quot;)">
                   </a> <!-- runScenario("Login successfully", "Login") -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("Login successfully","Login")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verification of selecting and viw details of the doctor successfull&quot;, &quot;Select and view details of t...)">
+                  </a> <!-- runScenario("Verification of selecting and viw details of the doctor successfull", "Select and view details of t...) -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verification of selecting and viw details of the doctor successfull","Select and view details of the doctor")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -154,22 +179,12 @@
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Launching the browser successfully&quot;, &quot;Launching the browser&quot;)">
-                  </a> <!-- runScenario("Launching the browser successfully", "Launching the browser") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Launching the browser successfully","Launching the browser")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SMILE\AppData\Local\Temp\testng-eclipse--1460943173\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SMILE\AppData\Local\Temp\testng-eclipse-1199165429\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -226,24 +241,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.runner.TestRunner')
-data.setCell(0, 3, 47270);
+data.setCell(0, 3, 27121);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'com.runner.TestRunner')
-data.setCell(1, 3, 25279);
+data.setCell(1, 3, 19637);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'com.runner.TestRunner')
-data.setCell(2, 3, 4407);
+data.setCell(2, 3, 2814);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'runScenario')
+data.setCell(3, 2, 'com.runner.TestRunner')
+data.setCell(3, 3, 1201);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 50 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -271,24 +290,28 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.runner.TestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@66451058)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@7ac48f05)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Launching the browser successfully", "Launching the browser")</span>
-                <span class="method-start">4011 ms</span>
+                <span class="method-start">8038 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Login successfully", "Login")</span>
-                <span class="method-start">8435 ms</span>
+                <span class="method-start">9260 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verification of finding the doctor successfully", "Find the doctor")</span>
-                <span class="method-start">55707 ms</span>
+                <span class="method-start">28899 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Verification of selecting and viw details of the doctor successfull", "Select and view details of t...)</span>
+                <span class="method-start">56022 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">80992 ms</span>
+                <span class="method-start">58841 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
